[project]
name = "arclet-cithun"
version = "1.1.0"
description = "A permission system modeled on the file permission system under Unix."
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "typing-extensions>=4.6.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]

[tool.pdm.build]
includes = ["src/"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
extra_standard_library = ["typing_extensions"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
disableBytesTypePromotions = true

[tool.ruff]
line-length = 120
target-version = "py310"
include = ["src/**.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "C408", "T201", "E731", "E402", "PYI055"]

[tool.pdm.scripts]
format = { composite = ["isort ./src/","black ./src/","ruff check ./src/"] }

[dependency-groups]
dev = [
    "isort==5.13.2",
    "black>=24.2.0",
    "ruff>=0.14.7",
]
